--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=quality-management-service
 spring.datasource.url=jdbc:h2:mem:management_service;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=123456
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
