--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,17 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
@@ -65,7 +76,8 @@
 			<version>1.5.5.Final</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
+
 	</dependencies>
 
 	<build>
