--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=quality-management-service
 
 
-spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS:1433;databaseName=qualitymanagementsystemdb;encrypt=true;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=password123
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=QualityManagementStudio;integratedSecurity=true;trustServerCertificate=true
+#spring.datasource.username=sa
+#spring.datasource.password=password123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 
@@ -11,6 +11,11 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+#Jwt
+jwt.secret=4SFSwosU5eY1heBWnrYQt-No8ZRGoW055wRm_q_6shg=
+jwt.access-token-expiration=900000
+jwt.refresh-token-expiration=604800000
 
 
 
