feat: implement login endpoint and service integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,12 @@ jwt.secret=4SFSwosU5eY1heBWnrYQt-No8ZRGoW055wRm_q_6shg=
 jwt.access-token-expiration=900000
 jwt.refresh-token-expiration=604800000
 
+#logging
+
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.hibernate=DEBUG
+#logging.level.org.springframework.security=DEBUG
+#logging.level.root=DEBUG
 
 
 # H2 Comments:
