--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=quality-management-service
 
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=QualityManagementStudio;integratedSecurity=true;trustServerCertificate=true
-#spring.datasource.username=sa
-#spring.datasource.password=password123
+spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS:1433;databaseName=qualitymanagementsystemdb;encrypt=true;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=password123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-
 
 # MicrosoftSQL Server DB
 spring.jpa.hibernate.ddl-auto=update
