Add ForgetAndReset Password Via Email 🤩

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=quality-management-service
+server.port=8081
 
-
-spring.datasource.url=jdbc:sqlserver://localhost;database=qualitymanagementdb;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS:1433;databaseName=qualitymanagementsystemdb;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=password123
+spring.datasource.password=159
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-
 
 # MicrosoftSQL Server DB
 spring.jpa.hibernate.ddl-auto=update
@@ -16,6 +15,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 jwt.secret=4SFSwosU5eY1heBWnrYQt-No8ZRGoW055wRm_q_6shg=
 jwt.access-token-expiration=900000
 jwt.refresh-token-expiration=604800000
+
+# Mail server settings
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=backend5cds@gmail.com
+spring.mail.password=tzwk yyhu uwbu eygp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+app.mail.from=backend5cds@gmail.com
 
 #logging
 
