--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=quality-management-service
-server.port=8081
+#server.port=8081
 
 spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS:1433;databaseName=qualitymanagementsystemdb;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
