--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=quality-management-service
 
 spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS:1433;databaseName=qualitymanagementsystemdb;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=159
+spring.datasource.password=password123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # MicrosoftSQL Server DB
